@@ -5,7 +5,8 @@ Changelog
 1.7.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add ``uninstall_product`` method to upgrade step class.
+  [jone]
 
 
 1.7.2 (2014-02-28)
